--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="hvd"><h2></h2></div>
     
     <div class="heart">
-        <h1>Nice boobies!</h1>
+        <h1>Monday na uli!</h1>
         <div class="part-1">
             <i class="fas fa-heart"></i>
         </div>
